Hamlib -- History of visible changes.

Copyright (C) 2000-2003  Frank Singleton
Copyright (C) 2000-2011  Stephane Fillod, and others

Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net

Version 1.2.15
	* New rotator backends: Celestron (telescope mount)
	* Fixes and features: K3

Version 1.2.14
	2011-08-01
	* New models: SigFox Transfox, TH-D72A, IC-7410, IC-9100, IC-R9500, KX3,
		V4L2 API support (untested),
	* New rotator backends: IF-100, TS-7400
	* Fixes and features: K3/KX3, Build Win32 from script, rigctld/rotctld
		ported to Mingw32, Win32 build fixes, remove obsolete bundled
		libtool files, rigctl improvements, FUNcube string test (works
		with V0.0 and V1.0), Yaesu newcat.c fixed to use
		rig->state.current_vfo to store vfo value, add a command to
		halt rigctld, select PTT source in Kenwood backends (TS-590S),
		make sure scan is stopped at IC-9000 opening, thd72 get channel
		data (alpha).  See ChangeLog for a link to the online log.
		Correct typos and SF.net URIs.

Version 1.2.13.1
	* 2011-05-29
	* Conversion to Git SCM and updated README documentation for Git SCM
	* Mingw32 build fixes
	* FUNcube dongle USB fixes for Win32
	* Added kit/README.funcubedongle
	* Bug fix--K3 antenna selection function

Version 1.2.13
	2011-03-12
	* New models: VX-1700, FUNcube Dongle, FiFi-SDR, KTH-SDR Si570,
		FT-DX5000, TS-590S, TH-F6A, PRM8060, SR-2200
	* Rotor fixes and features: SPID
	* New Rotor backend: F1TE Tracker
	* Fixes and features: TS-440S, K2, K3, THF6A, THF7E, NewCAT
		rigs serial port defaults, TM-D700, FT-950, Si570 AVR-USB
	* Removed libtool tree from source tree
	* Removed old DocBook files
	* Allow USB device's VID/PID/Vendor/Product to be explicitly specified
	* Doxygen documentation updates and new style sheet

Version 1.2.12
	2010-09-03
	* New models: PCR-2500, RX331, TRP 8255 S R
	* New rotator backends: DF9GR's ERC
	* Fixes and features: Paragon, TS-690S, FT-920, FT-990, FT-2000,